# voice-id

./: .gitignore  AGENT.md  CLAUDE.md  LICENSE  README.md  optmis.md  prepare.py  program.md  pyproject.jetson.toml  pyproject.toml  split_registration.py  test_sliding_window.py  training.py  wespeaker.py
asset_combine/: REGISTERED.md
docs/: AS-Norm.md  optimization-status.md  project-structure.md  script.md  voice-id.md
docs/diagrams/: architecture.md  data-flow.md  modules.md  recognition-flow.md  registration-flow.md  roadmap.md  sequence.md  tech-stack.md  test-configuration.md  train-architecture.md  train-data-flow.md  train-modules.md  train-roadmap.md  train-sequence.md  train-tech-stack.md
docs/superpowers/plans/: 2025-01-12-cross-test-diagnostics.md  2026-05-11-train-noise-injection.md  2026-05-23-onnx-engine-plan.md  2026-06-10-http-client-refactor.md
docs/superpowers/specs/: 2025-01-12-cross-test-diagnostics-design.md  2026-05-21-websocket-service-design.md  2026-05-22-asnorm-implementation-design.md  2026-05-23-onnx-engine-design.md  2026-06-10-wespeaker-http-client-refactor-design.md
scripts/: apply_aec_processing.py  backfill_confidence.py  batch_cross_test.py  batch_enroll_voiceprints.py  best_recognition.py  build_cohort.py  classify_orin.py  convert_sample_rate.py  cross_test.py  cross_test_merged.py  cross_test_real_case.py  experiment_noise_optimization.py  experiment_train_noise_injection.py  export_frank_vad.py  export_onnx_model.py  export_vad_audios.py  extract_cohort.py  extract_cohort_from_part.py  generate_audio_variants.py  install_jetson_deps.sh  mix_audio.py  mixed_voice_test.py  official-demo.py  official_cross_test.py  plot_batch_summary.py  plot_history.py  realtime_monitor.py  record_script.py  run_realtime_monitor.py  sliding_window_analyzer.py  split_registration.py  test_optimization.py  test_script.py  test_sliding_window.py  test_snr_vad.py  test_whl_isolated.sh  wespeaker-server.service
scripts/output/: cross_test_report_20260520_024930.md
src/wespeaker/: __init__.py  __main__.py  best.py  diagnostics.py  realtime_monitor.py  reporters.py  wespeaker.py
src/wespeaker_deep_edge/: __init__.py  __main__.py  _utils.py  asnorm.py  best.py  client.py  onnx_engine.py  realtime_monitor.py  wespeaker.py  wespeaker_deep_dege.py
src/wespeaker_deep_edge/_cohort/: __init__.py  cohort_embeddings.json  cohort_embeddings.npy
src/wespeaker_deep_edge/_models/: __init__.py
src/wespeaker_deep_edge/_models/vblinkf/: __init__.py
src/wespeaker_deep_edge/_voiceprints/: __init__.py  voice_albert.pkl  voice_angle.pkl  voice_frank.pkl  voice_john.pkl  voice_john_double_mic.pkl  voice_john_usb_yun.pkl  voice_michael.pkl  voice_qingqing.pkl  voice_xixi.pkl  voice_zhong.pkl
src/wespeaker_deep_edge/_wespeaker/wespeaker/cli/: speaker.py
src/wespeaker_deep_edge/client/: __init__.py  speaker_client.py
src/wespeaker_deep_edge/server/: __init__.py  cli.py  template_manager.py  ws_server.py
tests/wespeaker/: conftest.py  test_diagnostics.py  test_reporters.py  test_wespeaker.py
tests/wespeaker_deep_edge/: test_asnorm.py  test_client.py  test_onnx_engine.py  test_speaker_client.py  test_template_manager.py  test_wespeaker_deep_dege.py  test_ws_server.py
