[project]
name = "wespeaker-deep-edge"
version = "0.1.22"
description = "WeSpeaker 声纹识别工具 — 独立的声纹注册与识别 CLI 工具"
readme = "README.md"
license = "MIT"
requires-python = "==3.10.19"
authors = [
    { name = "WeSpeaker Contributors" }
]
keywords = ["speaker", "verification", "voice", "recognition", "speaker-identification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "audiomentations>=0.43.1",
    "hdbscan>=0.8.40",
    "kaldiio",
    "numpy==1.26.4",
    "pyannote-audio>=3.3.2",
    "pydub>=0.25.0",
    "pyyaml==6.0.3",
    "scipy>=1.0",
    "silero-vad",
    "sounddevice==0.5.2",
    "soundfile>=0.13.1",
    "s3prl",
    "tqdm",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "umap-learn==0.5.6",
    # wespeaker 内置依赖（vendored _wespeaker/）
    "accelerate",
    "onnxruntime>=1.16.0,<2.0",
    "openai-whisper",
    "peft",
    "scikit-learn",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.9",
]

[project.urls]
Homepage = "https://github.com/yourusername/wespeaker-deep-edge"
Documentation = "https://github.com/yourusername/wespeaker-deep-edge#readme"
Repository = "https://github.com/yourusername/wespeaker-deep-edge"
"Bug Tracker" = "https://github.com/yourusername/wespeaker-deep-edge/issues"

[project.scripts]
wespeaker-deep-edge = "wespeaker_deep_edge.client:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wespeaker_deep_edge" = ["*.yaml", "*.yml", "*.json", "*.txt"]
"wespeaker_deep_edge._models" = ["**/*"]
"wespeaker_deep_edge._voiceprints" = ["**/*"]
"wespeaker_deep_edge._wespeaker" = ["**/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/wespeaker_deep_edge --cov-report=term-missing --cov-fail-under=30"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
