[project]
name = "wespeaker-deep-edge"
version = "0.2.0"
description = "WeSpeaker Voice-ID HTTP client — speaker verification via remote API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WeSpeaker Contributors" }
]
keywords = ["speaker", "verification", "voice", "recognition", "speaker-identification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28",
    "soundfile>=0.13",
]

[project.urls]
Homepage = "https://github.com/yourusername/wespeaker-deep-edge"
Documentation = "https://github.com/yourusername/wespeaker-deep-edge#readme"
Repository = "https://github.com/yourusername/wespeaker-deep-edge"
"Bug Tracker" = "https://github.com/yourusername/wespeaker-deep-edge/issues"

[project.scripts]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wespeaker_deep_edge" = ["*.yaml", "*.yml", "*.json", "*.txt"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.21",
    "black>=24.0",
    "isort>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=src/wespeaker_deep_edge --cov-report=term-missing --cov-fail-under=25"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
